# nixos-manager

./: .gitignore  README.md  flake.nix  index.html  package-lock.json  package.json
src/: App.tsx  api.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  lib.rs  main.rs  scanner.rs  validator.rs
src/components/: AddConfigModal.tsx  BackupModal.tsx  EmptyState.tsx  LogPane.tsx  Sidebar.tsx  SudoPasswordModal.tsx  TopBar.tsx
src/styles/: global.css
