[package]
name = "nixie"
version = "0.1.0"
description = "Nixie — NixOS Flake Config Manager"
authors = ["Rob Willmore"]
license = "MIT"
repository = ""
default-run = "nixie"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "nixie_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "nixie"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
dirs = "5"
walkdir = "2"
regex = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
